--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
   },
   "author": "Wisboo Devs",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Wisboo/base-project/issues"
-  },
-  "homepage": "https://github.com/Wisboo/base-project#readme",
   "dependencies": {
     "@uirouter/angularjs": "^1.0.26",
     "angular": "^1.8.0"
@@ -25,6 +21,7 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "json-server": "^0.16.3",
     "node-sass": "^4.14.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
