--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "Wisboo Devs",
   "license": "MIT",
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.26",
-    "angular": "^1.8.0"
+    "@uirouter/angularjs": "^1.0.29",
+    "angular": "^1.8.0",
+    "restangular": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
